WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176134
Fix whitespace and formatting
https://bugs.webkit.org/show_bug.cgi?id=176134
Summary
Fix whitespace and formatting
Brent Fulgham
Reported
2017-08-30 16:21:34 PDT
Correct the formatting of _WKWebsiteDataStoreConfiguration.mm to match WebKit Style Guidelines.
Attachments
Patch
(3.60 KB, patch)
2017-08-30 16:23 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2017-08-30 16:23:07 PDT
Created
attachment 319420
[details]
Patch
Sam Weinig
Comment 2
2017-08-30 16:56:24 PDT
Comment on
attachment 319420
[details]
Patch Thank you!
WebKit Commit Bot
Comment 3
2017-08-30 19:32:24 PDT
Comment on
attachment 319420
[details]
Patch Clearing flags on attachment: 319420 Committed
r221412
: <
http://trac.webkit.org/changeset/221412
>
WebKit Commit Bot
Comment 4
2017-08-30 19:32:26 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-08-30 19:33:12 PDT
<
rdar://problem/34178823
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug