Source/WebKit/UIProcess/API/Cocoa/_WKWebsiteDataStoreConfiguration.mm
@@ -44,38 +44,46 @@ static void checkURLArgument(NSURL *url)
     RetainPtr<NSURL> _resourceLoadStatisticsDirectoryURL;
 }
 
--(NSURL *)_webStorageDirectory {
+- (NSURL *)_webStorageDirectory
+{
     return _webStorageDirectoryURL.get();
 }
 
--(void)_setWebStorageDirectory:(NSURL *)url {
+- (void)_setWebStorageDirectory:(NSURL *)url
+{
     checkURLArgument(url);
     _webStorageDirectoryURL = adoptNS([url copy]);
 }
 
--(NSURL *)_indexedDBDatabaseDirectory {
+- (NSURL *)_indexedDBDatabaseDirectory
+{
     return _indexedDBDatabaseDirectoryURL.get();
 }
 
--(void)_setIndexedDBDatabaseDirectory:(NSURL *)url {
+- (void)_setIndexedDBDatabaseDirectory:(NSURL *)url
+{
     checkURLArgument(url);
     _indexedDBDatabaseDirectoryURL = adoptNS([url copy]);
 }
 
--(NSURL *)_webSQLDatabaseDirectory {
+- (NSURL *)_webSQLDatabaseDirectory
+{
     return _webSQLDatabaseDirectoryURL.get();
 }
 
--(void)_setWebSQLDatabaseDirectory:(NSURL *)url {
+- (void)_setWebSQLDatabaseDirectory:(NSURL *)url
+{
     checkURLArgument(url);
     _webSQLDatabaseDirectoryURL = adoptNS([url copy]);
 }
 
--(NSURL *)_cookieStorageFile {
+- (NSURL *)_cookieStorageFile
+{
     return _cookieStorageFileURL.get();
 }
 
--(void)_setCookieStorageFile:(NSURL *)url {
+- (void)_setCookieStorageFile:(NSURL *)url
+{
     checkURLArgument(url);
     if ([url hasDirectoryPath])
         [NSException raise:NSInvalidArgumentException format:@"The cookie storage path must point to a file, not a directory."];
@@ -83,11 +91,13 @@ static void checkURLArgument(NSURL *url)
     _cookieStorageFileURL = adoptNS([url copy]);
 }
 
--(NSURL *)_resourceLoadStatisticsDirectory {
+- (NSURL *)_resourceLoadStatisticsDirectory
+{
     return _resourceLoadStatisticsDirectoryURL.get();
 }
 
--(void)_setResourceLoadStatisticsDirectory:(NSURL *)url {
+- (void)_setResourceLoadStatisticsDirectory:(NSURL *)url
+{
     checkURLArgument(url);
     _resourceLoadStatisticsDirectoryURL = adoptNS([url copy]);
 }
